--- a/sources/common/login-dialog/style.scss
+++ b/sources/common/login-dialog/style.scss
@@ -4,8 +4,8 @@
         .inputdiv{
             margin: 30px auto;
             text-align: center;
-            display: flex;
-            justify-content: flex-end;
+            display: center;
+            justify-content: center;
             .spanuser{
               display: inline-block;
               background: #4197F4;
@@ -16,8 +16,8 @@
             }
             input{
               height: 38px;
-              /* width: 26%; */
-              width: 365px;
+              width: 80%;
+              //width: 365px;
               outline: none;
               text-indent: 10px;
               border: none;
