--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -109,7 +109,7 @@
     </p>
   </footer>
 
-  <!-- <el-dialog
+<el-dialog
   title="登录"
   :visible.sync="dialogLoginVisible"
   size="tiny">
@@ -130,5 +130,5 @@
     <el-button @click="dialogLoginVisible = false">取 消</el-button>
     <el-button type="primary" @click="onSubmit()">登 录</el-button>
   </span>
-</el-dialog> -->
+</el-dialog>
 </main>
