--- a/sources/dashboard/style.scss
+++ b/sources/dashboard/style.scss
@@ -145,17 +145,17 @@
     .content {
       background: #FFFFFF;
       border: 1px solid #DFDFDF;
-      height: 460px;
+      height: 385px;
       .left {
         padding-left: 0;
         padding-right: 0;
-        height: 460px;
+        height: 385px;
         position: relative;
         .img-list {
           position: relative;
           .img-info {
             position: absolute;
-            bottom: 0;
+            bottom: 3px;
             width: 100%;
             height: 40px;
             background: rgba(0, 0, 0, 0.30);
@@ -169,7 +169,7 @@
           bottom: 0;
           right: 0;
           width: 90px;
-          height: 460px;
+          height: 385px;
           z-index: 111;
         }
       }
