--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -52,7 +52,7 @@
             </router-link>
           </li>
           <li class="nav_li2">
-            <router-link :to="{path:'/layout/catalog/statistic',query:{dirName:'政务部门信息资源目录'}}">
+            <router-link :to="{path:'/layout/catalog'}">
               <div class="bg_ico">
                 <span>数据目录</span>
               </div>
