分页调整 隐藏动态资源目录接口说明 首页目录展示接口联调和部局修正

--- a/sources/dashboard/style.scss
+++ b/sources/dashboard/style.scss
@@ -218,6 +218,11 @@
   .main-2 {
     background: $white;
     box-sizing: border-box;
+    .active{
+      background: #4197F4;
+      color: #fff;
+      border: none;
+    }
     .tab-body {
       text-align: center;
       .img-group {
