--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -4,8 +4,8 @@
       <div class="cont">
         <a class="navlog-brand">
           <div class="navbar-logo"><img class="logo" src="../assets/header/logo.png" /></div>
-          <div class="nav-text"><span class="text">成都市大数据资源服务网</span></br>
-            <span class="des-english">Chengdu Big Data Resource Service Network</span>
+          <div class="nav-text"><span class="text">{{sysObj.projectPortalName}}</span></br>
+            <span class="des-english">{{sysObj.projectPortalEnName}}</span>
           </div>
         </a>
       </div>
