--- a/sources/interaction/container/hotMessage/style.scss
+++ b/sources/interaction/container/hotMessage/style.scss
@@ -1,15 +1,13 @@
 @import "../../../common/base.scss";
 #hot-message {
-  position: relative;
   .navigator {
     display: block;
     width: auto;
   }
   .search {
     position: absolute;
-    top: 0;
-    right: 15px;
-    width: 30%;
+    top: 30px;
+    right: 60px;
   }
   .el-table th {
     background: $tableHd-blue;
@@ -32,7 +30,7 @@
       cursor: pointer;
       img {
         float: left;
-        margin:14px;
+        margin: 14px;
       }
       h5 {
         margin-top: 10px;
