--- a/sources/layout/style.scss
+++ b/sources/layout/style.scss
@@ -3,7 +3,6 @@
       @include fill;
       display: flex;
       flex-direction: column;
-      
       header {
         .banner {
           background: $main-blue;
@@ -81,6 +80,7 @@
           height: 100px;
           background: #FFFFFF;
           .menu_ul {
+            padding-right: 15px;
             margin-top: 10px;
             margin-bottom: 0;
             height: 50px;
@@ -214,55 +214,54 @@
           margin: 0 30px;
         }
       }
-      .float-profile{
-          position: fixed;
-          top: 170px;
-          right: 6px;
-          z-index: 9999;
-          .share-link{
-                display: block;
-                text-decoration: none;
-                img{
-                  width:50px;
-                }
+      .float-profile {
+        position: fixed;
+        top: 170px;
+        right: 6px;
+        z-index: 9999;
+        .share-link {
+          display: block;
+          text-decoration: none;
+          img {
+            width: 50px;
           }
-          p{
-            text-align:center;
-            color:$main-blue;
-          }
-          .other-link{
-            display:none;
-            li:first-child{
-                  padding: 15px 0;
-            }
-          }
-          &:hover{
-            .other-link{
-              display:block;
-            }
-          }
-      }
-.inputdiv{
-            margin: 30px auto;
-            text-align: center;
-            display: center;
-            justify-content: center;
-            .spanuser{
-              display: inline-block;
-              background: #4197F4;
-              vertical-align: middle;
-              img{
-                padding: 8px 13px;
-              }
-            }
-            input{
-              height: 38px;
-              width: 80%;
-              //width: 365px;
-              outline: none;
-              text-indent: 10px;
-              border: none;
-              border: 1px solid #dfdfdf;
-            }
         }
+        p {
+          text-align: center;
+          color: $main-blue;
+        }
+        .other-link {
+          display: none;
+          li:first-child {
+            padding: 15px 0;
+          }
+        }
+        &:hover {
+          .other-link {
+            display: block;
+          }
+        }
+      }
+      .inputdiv {
+        margin: 30px auto;
+        text-align: center;
+        display: center;
+        justify-content: center;
+        .spanuser {
+          display: inline-block;
+          background: #4197F4;
+          vertical-align: middle;
+          img {
+            padding: 8px 13px;
+          }
+        }
+        input {
+          height: 38px;
+          width: 80%; //width: 365px;
+          outline: none;
+          text-indent: 10px;
+          border: none;
+          border: 1px solid #dfdfdf;
+        }
+      }
     }
