--- a/sources/admin/container/applyList/style.scss
+++ b/sources/admin/container/applyList/style.scss
@@ -2,9 +2,10 @@
 #apply-list {
   width: 100%;
   .hd {
-    height: 40px;
-    line-height: 40px;
-    padding: 0 15px;
+    // height: 40px;
+    // line-height: 40px;
+    overflow: hidden;
+    padding: 10px 15px;
     background: $hd-blue;
     color: $white;
     .hd-title{
