--- a/sources/catalog/style.scss
+++ b/sources/catalog/style.scss
@@ -79,12 +79,12 @@
 	}
 
 	.head-desc {
-		height: 40px;
+		// height: 40px;
 		background-color: $hd-blue;
-		line-height: 40px;
-		padding: 0 15px;
+		// line-height: 40px;
+		padding: 10px 15px;
 		color: #FFF;
-
+overflow: hidden;
 		.title {
 			float: left;
 		}
