显示悬浮框和开发者工具

--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -73,13 +73,13 @@
               </div>
             </router-link>
           </li>
-          <!-- <li class="nav_li5">
+           <li class="nav_li5">
             <a href="http://10.190.239.12:8080/data-view-web-scatter/index.html" target="_blank">
               <div class="bg_ico">
                 <span>可视化展示</span>
               </div>
             </a>
-          </li> -->
+          </li> 
           <li class="nav_li6">
             <router-link to="/layout/interaction">
               <div class="bg_ico">
@@ -92,13 +92,13 @@
     </nav>
   </header>
   <router-view class="router-layout" ></router-view>
-  <!-- <section class="float-profile">
+   <section class="float-profile">
     <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_2/page.html?singlePage=true" class="share-link" target="_blank"><img src="../assets/ico/share.png" /><p>共享</p></a>
     <ul class="other-link">
       <li><a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_3/page.html?singlePage=true" class="share-link" target="_blank"><img src="../assets/ico/open.png" /></a><p>开放</p></li>
       <li><a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_4/page.html?singlePage=true" class="share-link" target="_blank"><img src="../assets/ico/theme.png" /></a><p>主题</p></li>
     </ul>
-  </section> -->
+  </section> 
   <footer>
     <p class="firstfooterp">
       <router-link :to="{ path: '/layout/interaction/aboutUs' }" class="aboutus">
