--- a/sources/common/reset.scss
+++ b/sources/common/reset.scss
@@ -155,4 +155,8 @@ html {
       top: 40%!important;
       left: 50%!important;
     }
+    /* select style*/
+    .el-tree{
+      border: none;
+    }
 }
