接口的信息

--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -105,9 +105,9 @@
       <router-link :to="{ path: '/layout/interaction/aboutUs' }" class="aboutus">
     关于我们</router-link>| <router-link :to="{ path: '/layout/interaction/aboutUs' }" class="interaction">互动交流</router-link>
     </p>
-    <p v-html="satelliteInfo.content">
+    <!-- <p v-html="satelliteInfo.content"> -->
       <!-- <span>主办：成都市人民政府</span><span class="m-30">承办：成都市大数据和电子政务管理办公室</span><span>  承建维护：成都市软件产业发展中心</span> -->
-    </p>
+    <!-- </p> -->
   </footer>
 
 <el-dialog
