logo宽度设置兼容

--- a/sources/layout/style.scss
+++ b/sources/layout/style.scss
@@ -7,7 +7,7 @@
         .banner {
           background: $main-blue;
           height: 140px;
-          width: 530px;
+          // width: 530px;
           position: absolute;
           .img-bg {
             width: 40px;
