--- a/sources/login/style.scss
+++ b/sources/login/style.scss
@@ -8,7 +8,7 @@
     position: relative;
     overflow: hidden;
     .top_conttitle {
-      width: 568px;
+      // width: 568px;
       margin: 100px auto;
       height: 240px;
       position: relative;
