接口说明字段转换类型

--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -4,7 +4,7 @@
       <div class="cont">
         <a class="navlog-brand">
           <div class="navbar-logo">
-            <img class="logo" v-bind:src="sysObj.projectPortalLogo" alt="logo"  width="72" height="72" /></div>
+            <img class="logo" v-bind:src="sysObj.projectPortalLogo"   width="72" height="72" /></div>
           <div class="nav-text"><span class="text">{{sysObj.projectPortalName}}</span></br>
             <span class="des-english">{{sysObj.projectPortalEnName}}</span>
           </div>
