--- a/sources/catalog/style.scss
+++ b/sources/catalog/style.scss
@@ -6,6 +6,34 @@
 	}
 	::-webkit-scrollbar{width:3px;background-color:#e1e5ea;}
 	::-webkit-scrollbar-thumb{background-color:#c3cad4;border-radius:8px;}
+	      .float-profile {
+        position: fixed;
+        top: 170px;
+        right: 6px;
+        z-index: 9999;
+        .share-link {
+          display: block;
+          text-decoration: none;
+          img {
+            width: 80px;
+          }
+        }
+        p {
+          text-align: center;
+          color: $main-blue;
+        }
+        .other-link {
+          display: none;
+          li:first-child {
+            padding: 15px 0;
+          }
+        }
+        &:hover {
+          .other-link {
+            display: block;
+          }
+        }
+      }
 	.section-content {
 		padding: 30px 0;
 		width: 1260px;
