隐藏项目英文名

--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -6,7 +6,7 @@
           <div class="navbar-logo">
             <img class="logo" v-bind:src="sysObj.defaultIcon"   width="72" height="72" /></div>
           <div class="nav-text"><span class="text">{{sysObj.projectPortalName}}</span></br>
-            <span class="des-english">{{sysObj.projectPortalEnName}}</span>
+            <!-- <span class="des-english">{{sysObj.projectPortalEnName}}</span> -->
           </div>
         </a>
       </div>
