--- a/sources/layout/style.scss
+++ b/sources/layout/style.scss
@@ -22,7 +22,8 @@
             @include pull-left;
           }
           .nav-text {
-            margin-top: 35px;
+            // margin-top: 35px;
+            line-height: 140px;
             @include pull-left;
             .text {
               font-size: 30px;
