--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -4,7 +4,8 @@
       <div class="cont">
         <a class="navlog-brand">
           <div class="navbar-logo">
-            <img class="logo" v-bind:src="sysObj.defaultIcon"   width="72" height="72" /></div>
+            <img class="logo" v-bind:src="sysObj.defaultIcon" />
+          </div>
           <div class="nav-text"><span class="text">{{sysObj.projectPortalName}}</span></br>
             <!-- <span class="des-english">{{sysObj.projectPortalEnName}}</span> -->
           </div>
