--- a/sources/interaction/style.scss
+++ b/sources/interaction/style.scss
@@ -8,22 +8,32 @@
   .left {
     margin-right: 15px;
     background: $white;
-    min-height: 1045px; // filter: progid: DXImageTransform.Microsoft.Shadow(color=#909090, direction=120, strength=4);
+    // min-height: 1045px; // filter: progid: DXImageTransform.Microsoft.Shadow(color=#909090, direction=120, strength=4);
     // -moz-box-shadow: 2px 2px 10px #909090;
     // -webkit-box-shadow: 2px 2px 10px #909090;
     box-shadow: 2px 2px 10px #909090;
   }
   .right {
     background: $white;
-    min-height: 1045px;
+    min-height: 235px;
     margin-bottom: 60px;
     padding: 30px 60px;
     box-sizing: border-box; //     filter: progid: DXImageTransform.Microsoft.Shadow(color=#909090, direction=120, strength=4);
     // -moz-box-shadow: 2px 2px 10px #909090;
     // -webkit-box-shadow: 2px 2px 10px #909090;
     box-shadow: 2px 2px 10px #909090;
+   .title_des{
+    text-align: center;
+    border-bottom: 1px solid #333;
+    padding-bottom: 8px;
+    margin-bottom: 20px;
+    letter-spacing: 1px
+  }
   }
   p {
     margin: 0 0 10px;
+  }
+  .el-form-item__label{
+    color: #333;
   }
 }
