--- a/sources/dashboard/style.scss
+++ b/sources/dashboard/style.scss
@@ -117,20 +117,25 @@
       }
     }
   }
+  .main-title{
+position: relative;
+      margin-bottom: 20px;
+      .title{
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        top: 5px;
+        font-weight: normal;
+        margin-bottom: 65px;
+        font-size: 26px;
+      }
+  }
   .main-1 {
     background: #F5F5F5;
     padding-top: 40px;
     .main-title {
-      position: relative;
-      margin-bottom: 10px;
       .title {
-        position: absolute;
-        text-align: center;
-        width: 100%;
-        top: -12px;
-        font-weight: normal;
-        margin-bottom: 65px;
-        font-size: 26px;
+        
         color: #4197F4;
       }
       .opacity-title {
@@ -265,16 +270,8 @@
   .main-3 {
     background: $main-blue;
     .main-title {
-      position: relative;
-      margin-bottom: 10px;
       .title {
-        position: absolute;
-        text-align: center;
-        width: 100%;
-        top: -12px;
-        font-weight: normal;
-        margin-bottom: 65px;
-        font-size: 26px;
+        
         color: $white;
       }
       .opacity-title {
@@ -359,16 +356,8 @@
   .main-4 {
     background: $white;
     .main-title {
-      position: relative;
-      margin-bottom: 10px;
       .title {
-        position: absolute;
-        text-align: center;
-        width: 100%;
-        top: -12px;
-        font-weight: normal;
-        margin-bottom: 65px;
-        font-size: 26px;
+       
         color: #4197F4;
       }
       .opacity-title {
