--- a/sources/layout/style.scss
+++ b/sources/layout/style.scss
@@ -48,8 +48,9 @@
           .cont {
             margin: 0;
             color: #ddd;
+             font-size: 12px;
             .admin {
-              font-size: 12px;
+             
               margin-right: 15px;
               .el-dropdown-link {
                 color: #ddd;
@@ -67,8 +68,8 @@
             }
             img {
               vertical-align: middle;
-              width: 16px;
-              height: 16px;
+              width: 14px;
+              // height: 16px;
             }
             li {
               display: inline-block;
