--- a/sources/searchPage/style.scss
+++ b/sources/searchPage/style.scss
@@ -18,12 +18,13 @@
     }
     .search {
       position: absolute;
-      top: 3px;
+      top: 7px;
       right: 15px;
-      width: 30%;
+      width: 40%;
       .el-input-group__append,
       .el-input-group__prepend {
         background-color: $main-blue;
+        border-color: $main-blue;
       }
       .el-button {
         color: $white;
