合并后处理 BUG #48029【登陆页面】登陆页面图中多了个logo字段

--- a/sources/layout/view.html
+++ b/sources/layout/view.html
@@ -75,13 +75,13 @@
               </div>
             </router-link>
           </li>
-           <li class="nav_li5">
+           <!-- <li class="nav_li5">
             <a v-bind:href="sysObj.keshihua"  target="_blank">
               <div class="bg_ico">
                 <span>可视化展示</span>
               </div>
             </a>
-          </li> 
+          </li>  -->
           <li class="nav_li6">
             <router-link to="/layout/interaction">
               <div class="bg_ico">
