动态资源静态资源 所属系统跳转，系统详情接口

--- a/sources/common/reset.scss
+++ b/sources/common/reset.scss
@@ -158,11 +158,11 @@ html {
   .el-input__inner {
     height: 30px!important;
   }
-  /* alert style  */
+  /* message common style  */
   .el-message {
-    position: absolute!important;
-    top: 40%!important;
-    left: 50%!important;
+    position: fixed;
+    top: 40%;
+    left: 50%;
   }
   /*el-tabs style */
   #apply-list .el-tabs__nav-scroll {
