style 工具 所属系统style

--- a/sources/catalog/details/style.scss
+++ b/sources/catalog/details/style.scss
@@ -1,6 +1,10 @@
 @import "../../common/base.scss";
 
 #details {
+	.jump_system{
+		text-decoration: underline;
+		color: $main-blue;
+	}
 	.item-content {
 		border: 1px solid #DBE0E8;
 		margin-top: 20px;
