--- a/sources/interaction/style.scss
+++ b/sources/interaction/style.scss
@@ -5,6 +5,9 @@
     margin: 20px 0;
     padding-left: 0px;
   }
+  .body{
+  min-height: 400px;
+  }
   .left {
     margin-right: 15px;
     background: $white;
