工具图片设置大小

--- a/sources/dashboard/style.scss
+++ b/sources/dashboard/style.scss
@@ -412,7 +412,8 @@ position: relative;
         margin: 0 20px;
         box-sizing: border-box;
         img {
-          width: 44px; // height: 64px;
+          width: 44px; 
+          height: 44px;
           display: inline-block;
         }
         &:hover {
