--- a/sources/common/reset.scss
+++ b/sources/common/reset.scss
@@ -155,9 +155,9 @@ html {
     padding-right: 5px;
   }
   /* input common style */
-  // .el-input__inner {
-  //   height: 30px!important;
-  // }
+  .el-input__inner {
+    height: 30px;
+  }
   /* message common style  */
   .el-message {
     position: fixed;
